# Info601-Project

./: .gitignore  CMakeLists.txt  README.md
src/: Doxyfile  main.c  makefile  ncurse.c  scene.c  scene.h  tools_error.c  tools_error.h
src/client/: connection.h  main.c
src/viewer/: connection.h
